For a more detailed list of changes, please see the Docutils `HISTORY`_.

.. contents::

Future changes
==============

* `latex` writer:
    The default for the configuration setting `legacy_class_functions`_ will
    change to "False". Adapt stylesheets modifying ``\DUadmonition``
    and/or ``\DUtitle`` or set to "True".

* `html5` writer:
    Use <aside> instad of <dl> for footnote text and citations
    and <nav> instead of <div> for the Table of Contents.

    Use <summary> and <details> tags for term and definition of a
    definition list with class value "details".
    
    Move attribution behind the blockquote to comply with
    https://html.spec.whatwg.org/#the-blockquote-element.
    
* `s5_html` writer:
    Remove the IE PNG Fix by Angus Turnbull. IE has native PNG
    support since version 7.

* Make <meta> a standard Docutils doctree node.

  The `meta directive`__ will insert <meta> instead of pending nodes.
  Writers may ignore some or all <meta> elements if they are not
  supported by the output format.

  The ``transforms/components.Filter`` class will become obsolete by
  this change and may be removed in future.

  __ docs/ref/rst/directives.html#meta

* ``Node.traverse()`` will return an iterator instead of a list.

* Remove ``utils.unique_combinations``
  (obsoleted by ``itertools.combinations``).

* Eventually remove the "rawsource" attribute and argument from nodes.Text:
  we store the null-escaped text in Text nodes since 0.16 so there is no
  additional information in the rawsource.

* If the id_prefix_ setting is non-empty, leading number and hyphen characters
  will not be stripped from a `reference name`_ during `identifier
  normalization`_. This may change generated `identifier keys`.

  Example: with ``--id-prefix="DU-"``, a section with title "34. May"
  currently gets the identifier key ``DU-may`` and after the change the
  identifier key ``DU-34-may``.

* The default value for auto_id_prefix_ will change to "%". This means